# MyEngine

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.md  ChangeLog_zh.md  ImprovementSuggestions.md  README.md  README_zh.md
.gitee/ISSUE_TEMPLATE/: 3_help_request.md
.github/ISSUE_TEMPLATE/: 1_bug_report_zh.yml
.github/workflows/: CI.yml  ci-optimized.yml  ci.yml  dependencies.yml  release.yml
GTest/: CMakeLists.txt  main.cpp
cmake/: S3GFConfig.cmake.in
docs/: Doxyfile  README.md
docs/docbook/: _basic_8h.xml  _basic_8h_source.xml  _components_8cpp.xml  _components_8h.xml  _components_8h_source.xml  _core_8cpp.xml  _core_8h.xml  _core_8h_source.xml  _cursor_8h.xml  _cursor_8h_source.xml  _date_time_8h.xml  _date_time_8h_source.xml  _draw_8h.xml  _draw_8h_source.xml  _libs_8h.xml  _libs_8h_source.xml  _multi_thread_2_components_8cpp.xml  _multi_thread_2_components_8h.xml  _multi_thread_2_components_8h_source.xml  _queue_8h.xml  _queue_8h_source.xml  _random_8cpp.xml  _random_8h.xml  _random_8h_source.xml  annotated.xml  class_s3_g_f_1_1_audio_system.xml  class_s3_g_f_1_1_cursor.xml  class_s3_g_f_1_1_date_time.xml  class_s3_g_f_1_1_engine.xml  class_s3_g_f_1_1_event_system.xml  class_s3_g_f_1_1_font.xml  class_s3_g_f_1_1_graphics_1_1_line.xml  class_s3_g_f_1_1_graphics_1_1_point.xml  class_s3_g_f_1_1_graphics_1_1_rectangle.xml  class_s3_g_f_1_1_graphics_1_1_triangle.xml  class_s3_g_f_1_1_logger.xml  class_s3_g_f_1_1_random_generator.xml  class_s3_g_f_1_1_renderer.xml  class_s3_g_f_1_1_task_queue.xml  class_s3_g_f_1_1_text_system.xml  (+30 more)
docs/en/: Doxyfile  mainpage.md
docs/en/html/: _button_8cpp.html  _button_8h.html  _button_8h.js  _button_8h_source.html  _collider_8h.html  _collider_8h_source.html  _components_8cpp.html  _components_8h.html  _control_8cpp.html  _control_8h.html  _control_8h_source.html  _core_8h.html  _core_8h_source.html  _cursor_8h.html  _cursor_8h_source.html  _date_time_8h.html  _date_time_8h.js  _date_time_8h_source.html  _draw_8h.html  _draw_8h_source.html  _file_system_8cpp.html  _file_system_8h.html  _file_system_8h.js  _file_system_8h_source.html  _libs_8h.html  _libs_8h_source.html  _logger_8h.html  _logger_8h_source.html  _multi_thread_2_components_8cpp.html  _multi_thread_2_components_8h.html  _multi_thread_2_components_8h.js  _multi_thread_2_components_8h_source.html  _queue_8h.html  _queue_8h_source.html  _random_8h.html  _random_8h.js  _random_8h_source.html  _thread_pool_8h.html  _thread_pool_8h_source.html  annotated.html  (+118 more)
docs/en/related/: ColorMap.md
docs/html/: _basic_8h.html  _basic_8h.js  _basic_8h_source.html  _button_8cpp.html  _button_8h.html  _button_8h_source.html  _collider_8h.html  _collider_8h_source.html  _components_8cpp.html  _components_8h.html  _components_8h_source.html  _control_8cpp.html  _control_8h.html  _control_8h_source.html  _core_8cpp.html  _core_8h.html  _core_8h.js  _core_8h_source.html  _cursor_8h.html  _cursor_8h.js  _cursor_8h_source.html  _date_time_8h.html  _date_time_8h_source.html  _draw_8h.html  _draw_8h.js  _draw_8h_source.html  _file_system_8cpp.html  _file_system_8h.html  _file_system_8h_source.html  _libs_8h.html  _libs_8h_source.html  _logger_8h.html  _logger_8h_source.html  _multi_thread_2_components_8cpp.html  _multi_thread_2_components_8h.html  _multi_thread_2_components_8h_source.html  _queue_8h.html  _queue_8h_source.html  _random_8cpp.html  _random_8h.html  (+201 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_3.js  classes_5.js  classes_6.js  classes_b.js  classes_c.js  defines_2.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  enumvalues_13.js  enumvalues_2.js  enumvalues_3.js  (+51 more)
docs/man/man3/: Basic.h.3  Button.cpp.3  Button.h.3  Collider.h.3  Components.cpp.3  Components.h.3  Control.cpp.3  Control.h.3  Core.cpp.3  Core.h.3  Cursor.h.3  D__Coding_S3GF_src_.3  D__Coding_S3GF_src_Algorithm_.3  D__Coding_S3GF_src_Controls_.3  D__Coding_S3GF_src_MultiThread_.3  DateTime.h.3  S3GF.3  (+59 more)
docs/zh/: mainpage.md
docs/zh_SC/: Doxyfile  README.md
docs/zh_TC/: README.md
src/: Basic.cpp  Basic.h  Components.cpp  Components.h  Core.cpp  Core.h  Exception.h  Libs.h  MyEngine  RCommand.h  S3GF
src/Algorithm/: All  All.h  Collider.h  Draw.h  RGBAPixels.h  String.h
src/Controls/: Button.cpp  Button.h  Control.cpp  Control.h
src/Game/: Collider.cpp  Collider.h  GObject.cpp  Object.cpp  Object.h  Sprite.cpp  Sprite.h  SpriteSheet.cpp  SpriteSheet.h
src/MultiThread/: All  Components.cpp  Components.h  Queue.h  ThreadPool.h
src/Renderer/: BaseCommand.cpp  BaseCommand.h  CommandFactory.h  CommandPool.cpp  CommandPool.h
src/Sprite/: Sprite.cpp  Sprite.h  SpriteSheet.cpp  SpriteSheet.h
src/Template/: Singleton.h
src/UI/: All.h  Button.cpp  Button.h  Control.cpp  Control.h
src/Utils/: All  All.h  Cursor.cpp  Cursor.h  DateTime.h  FileSystem.cpp  FileSystem.h  Logger.h  RGBAColor.h  Random.h  SysMemory.cpp  SysMemory.h  Variant.cpp  Variant.h
src/Widgets/: AbstractLayout.cpp  AbstractLayout.h  AbstractWidget.cpp  AbstractWidget.h  All.h  Button.cpp  Button.h  HorizontalLayout.cpp  HorizontalLayout.h  Label.cpp  Label.h  LineEdit.cpp  LineEdit.h  ScrollBar.cpp  ScrollBar.h  VerticalLayout.cpp  VerticalLayout.h
templates/: CustomRenderCommand.h  CustomWidget.h  NewWindow.h  main.cpp
test/: CMakeLists.txt  FilledWin.h  MyCMD.h  MyWindow.h  main.cpp  testGraphic.cpp  testTaskManager.cpp
test/core/AudioSystem/: test_audio_system.cpp
test/core/EventSystem/: test_event_system.cpp
test/core/engine/: test_engine.cpp
test/core/renderer/: test_renderer.cpp
test/core/window/: test_window.cpp
test/examples/test_renderer/: test_renderer.cpp
test/examples/test_simple/: test_simple.cpp
test/examples/test_widgets/: test_widgets.cpp
test/examples/test_window/: MyWindow.cpp  MyWindow.h  test_window.cpp
(+310 files in other folders)
